Update README, add images-service.js, add file imports to main, add display section to html

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
-.test {
+body {
   color: purple;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bold;
 }
 
