Update style sheet
Co-authored-by: Randel Moore <randel.c.moore@gmail.com>
Co-authored-by: Glen Buck <glenbuck503@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,13 @@
 body {
+  background-image: url("../../assets/images/galaxy-3608029_1280.jpg");
   color: purple;
+  letter-spacing: 2px;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bold;
 }
 
-.highlight {
-  background-color: wheat;
+.body-text {
+  color: wheat;
+  letter-spacing: 1px;
   display: inline;
 }
