Pass console log & html display test on API data
Co-authored-by: Randel Moore <randel.c.moore@gmail.com>
Co-authored-by: Glen Buck <glenbuck503@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,8 @@ body {
   font-weight: bold;
 }
 
-.body-text {
+.body-text,
+#search-button {
   color: wheat;
   letter-spacing: 1px;
   display: inline;
