Add and pass Mars weather service display across appropriate pages

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .body-text,
-#search-button {
+#search-button, #mars-weather {
   color: wheat;
   letter-spacing: 1px;
   display: inline;
